--- a/page2.html
+++ b/page2.html
@@ -196,7 +196,7 @@
                 
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">What it means to us:</h4>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    You can use content blocks to arrange your articles, large texts, instructions. Combine these blocks with media blocks to add illustrations and video tutorials. You can use various content blocks to work with your text. Add quotations, lists, buttons. Select your text to change its formatting or add links. Mobirise is a simple website builder that helps you create amazing web pages without knowing any code.</p>
+                    At our brand for expats, we understand the unique challenges that expats face when it comes to dating. Our platform is designed to cater to the needs of expats who are looking for meaningful connections and relationships with like-minded individuals who share their experiences and values.</p>
             </div>
         </div>
     </div>
