new text for page 2 and 3

--- a/page2.html
+++ b/page2.html
@@ -196,7 +196,7 @@
                 
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">What it means to us:</h4>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    At our brand for expats, we understand the unique challenges that expats face when it comes to dating. Our platform is designed to cater to the needs of expats who are looking for meaningful connections and relationships with like-minded individuals who share their experiences and values.</p>
+                    We understand that dating can be challenging, especially when you're living in a foreign country. That's why we're committed to providing our users with the support and resources they need to succeed in their dating journey. From expert dating advice to community forums where you can connect with other expats, we're here to help you every step of the way.</p>
             </div>
         </div>
     </div>
