image and new text

--- a/page3.html
+++ b/page3.html
@@ -115,10 +115,7 @@
                     <div class="card-box align-center">
                         <h1 class="card-title mbr-fonts-style mb-3 display-1">
                             <strong>We are all on a Journey.</strong></h1>
-                        <p class="mbr-text mbr-fonts-style display-7">Click any text to edit or style it. Select
-                            text to insert a link. Click blue "Gear" icon in the top right corner to hide/show buttons,
-                            text, title and change the block background. Click red "+" in the bottom right corner to add
-                            a new block. Use the top left menu to create new pages, sites and add themes.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">We believe that life is a journey, and finding love and companionship is an important part of that journey. As an expat, you may be on a unique journey of your own, navigating new cultures, languages, and experiences. That's why our brand for expats is designed to help you find meaningful connections and relationships wherever your journey may take you.&nbsp;</p>
                         <div class="mbr-section-btn mt-3"><a class="btn btn-secondary-outline display-4" href="page3.html#pricing2-1o">Support us now &gt;</a></div>
                     </div>
                 </div>
