fixed production text

--- a/page4.html
+++ b/page4.html
@@ -147,47 +147,47 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7"><strong>Colour Palette:<br></strong><br>#F5E9D9 The beige is used for calming contrasts within our colour palette, since it is supposed to have a warm and welcoming effect.<br><br>#FAC00D The saturated yellow has a light, uplifting, playful and stimulating effect.<br><br>#F89F15 The bright orange evokes happiness, sense of refreshment and also relates to the origin of our brand and its signature colour (The Netherlands).<br><br>#960224 For a sex-related brand, of course there has to be a shade of red in the colour palette. Red symbolises heat, activity, passion, sexuality, love and joy.<br><br>#D91A4D The pink radiates romance, delicateness and a charming energy.<br><br>#66097D The vivid purple reflects sensuality and mystery.<br><br><strong>Font Choices:&nbsp;<br></strong>Roboto Mono / 29LT Zawi, Raleway, Jost<br><br>UX Patterns: The carousel on our landing pages welcomes every visitor with heart-warming, connection-related images and a specific value of our brand.  
-We chose to implement the image carousel to introduce the visitor to our website in an attractive way, since looking at visuals preferred over static text and endless paragraphs.  
+We chose to implement the image <strong> carousel</strong> to introduce the visitor to our website in an attractive way, since looking at visuals preferred over static text and endless paragraphs.&nbsp;  
 
  
 
-Furthermore, scrolling down, visitors see our brand vision. The brand vision is headlined with an intriguing slogan, purposely in two of our fonts of choice (Raleway, Roboto Mono).  
+Furthermore, scrolling down, visitors see our brand vision. The brand vision is headlined with an intriguing slogan, purposely in two of our <strong>fonts of choice (Raleway, Roboto Mono). </strong>&nbsp; 
 
  
-Most importantly, the paragraph of the brand vision is visually supported through a small and subtle video in the background. We lowered the opacity on the video to not distract the visitor and just make it a subtle, visually pleasing addition and more interesting background. 
+Most importantly, the paragraph of the brand vision is visually supported through a small and <strong>subtle video in the background.</strong> We <strong>lowered the opacity</strong> on the video to not distract the visitor and just make it a subtle, visually pleasing addition and more interesting background.&nbsp;
 
-We choose the video of the clouds to visualize the “expat” and “connections all over the world” aspect of our brand, but also to underline the “lightweight feeling” of love and excitement we stand for as a brand. The paragraph closes with two buttons that include different calls-to-action: One to directly lead the visitor to our sign-up page, the other to direct the visitor to our about us page to cover any additional information.  
-
- 
-
-We purposely choose to keep the overall look of the website more on the light and colourful side, because we actively try to avoid the overly sexual appearance of other common dating platforms. Although we openly promote sexual connections, we are catering to young professionals and adult expats that are interested in finding a partner for sex or their connection of choice, but they do not want to visit websites that necessarily look like it. 
-
-Therefore, we decided to limit the use of colour and to maintain the lighter look of the website in general.  
+We choose the video of the clouds to visualize the “expat” and “connections all over the world” aspect of our brand, but also to underline the “lightweight feeling” of love and excitement we stand for as a brand. The paragraph closes with <strong>two buttons that include different calls-to-action:</strong> One to directly lead the visitor to our sign-up page, the other to direct the visitor to our about us page to cover any additional information.&nbsp; 
 
  
 
-The top horizontal navigation menu ensures that the visitor has a clear overview of the most important things about our brand and is able to intuitively navigate through our website at all times.  
+We purposely choose to keep the overall look of the website more on the light and colourful side, because we actively try to avoid the overly sexual appearance of other common dating platforms. Although we openly promote sexual connections, we are catering to young professionals and adult expats that are interested in finding a partner for sex or their connection of choice, but they do not want to visit websites that necessarily look like it.&nbsp;
 
-We choose six different navigation tabs: Home, About Us, Contact, Crowdfunding, Corporate and Sign Up. Home and Corporate are self-explanatory.  
- 
-
-About Us includes all information regarding the team, our values and the purpose we serve as a brand. To make it easy to understand, we choose three icons (globus for cross-cultural, international connection / light bulb to communicate literal enlightenment and learning / smiley for love, joy and happiness – no matter if it is platonic or sexual) that represent what we can provide our customers with.  
-
-We chose to implement a horizontal 4-image-gallery with fruit-themed pictures to tie it together with our Instagram posts where we already used the fruit theme repeatedly. The fruits symbolise freshness, health and are also subtly sexualised within our posts and across our website.  
-
-To visually connect our team information with our contact information, both parts are divided into 4 blocks and shaded in one of our brand colours (orange, #F89F15).  
+Therefore, we <strong>decided to limit the use of colour and to maintain the lighter look of the website</strong> in general.&nbsp;
 
  
-The separate contact tab is intended to make it quick, easy and accessible for people that are curious and interested in directly contacting us, ideally to discuss a possible investment in our brand.  
 
-We choose to add this tab, because it reduces the distance and time potential investors need to spend on our site in order to know how to reach out to us. 
+The <strong>top horizontal navigation menu</strong> ensures that the visitor has a clear overview of the most important things about our brand and is able to intuitively navigate through our website at all times.&nbsp; 
+
+We choose <strong>six different navigation tabs</strong> Home, About Us, Contact, Crowdfunding, Corporate and Sign Up. Home and Corporate are self-explanatory.&nbsp;
+ 
+
+<strong>About Us</strong> includes all information regarding the team, our values and the purpose we serve as a brand. To make it easy to understand, we choose <strong>three icons</strong> (globus for cross-cultural, international connection / <strong>light bulb</strong> to communicate literal enlightenment and learning / <strong>smiley</strong> for love, joy and happiness – no matter if it is platonic or sexual) that represent what we can provide our customers with.&nbsp;  
+
+We chose to implement <strong>a horizontal 4-image-gallery</strong> with fruit-themed pictures to tie it together with our Instagram posts where we already used the fruit theme repeatedly. The <strong>fruits symbolise freshness, health and are also subtly sexualised</strong> within our posts and across our website.&nbsp;  
+
+To visually connect our team information with our contact information, both parts are divided into <strong>4 blocks</strong> and <strong>shaded in one of our brand colours</strong> (orange, #F89F15).&nbsp;  
 
  
-Within the crowdfunding tab, we obviously elaborate on why we are worth every penny of investment. We imagine our brand to still be a work in progress, therefore the form to sign up serves the purpose for future members of our community to be part of our development and stay in the loop of things, until we reach a point where we can provide the finished app.  
+The separate <strong>contact tab</strong> is intended to make it quick, easy and accessible for people that are curious and interested in directly contacting us, ideally to discuss a possible investment in our brand.&nbsp;  
 
-The form is visually supported through a paradise-like image, that is intended to evoke positive, dreamy feelings and touch upon the “international” and “expat” aspect of our brand.  
+We choose to add this tab, because it reduces the distance and time potential investors need to spend on our site in order to know how to reach out to us.&nbsp; 
 
-The form is followed by a funding tier plan, that we intendedly kept short and compressed to make it easily understandable what we are looking for in additional funding.  
+ 
+Within the <strong>crowdfunding tab</strong>, we obviously elaborate on why we are worth every penny of investment. We imagine our brand to still be a work in progress, therefore the <strong>form</strong> to sign up serves the purpose for future members of our community to be part of our development and stay in the loop of things, until we reach a point where we can provide the finished app.&nbsp;  
+
+The form is visually supported through a paradise-like image, that is intended to evoke positive, dreamy feelings and touch upon the “international” and “expat” aspect of our brand.&nbsp;  
+
+The form is followed by a <strong>funding tier plan</strong>, that we intendedly kept short and compressed to make it easily understandable what we are looking for in additional funding.&nbsp;  
 
  <br><br><br><br><br></p>
                             </div>
