--- a/page3.html
+++ b/page3.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Crowdfunding</title>
+  <title>Sexpats Crowdfunding</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
