--- a/page2.html
+++ b/page2.html
@@ -128,7 +128,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3 active">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-518x345.jpeg" alt="Mobirise Website Builder">
+                        <img src="assets/images/Images about us/fruit3.jpeg" alt="Mobirise Website Builder">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
@@ -144,7 +144,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-1920x1275.jpeg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1">
+                        <img src="assets/images/Images about us/fruit4.jpeg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
@@ -159,7 +159,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-518x332.jpeg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2">
+                        <img src="assets/images/Images about us/fruit2.jpeg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Health</strong></h5>
@@ -173,7 +173,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-2-518x345.jpeg" alt="Mobirise Website Builder" title="">
+                        <img src="assets/images/Images about us/fruit1.jpeg" alt="Mobirise Website Builder" title="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
@@ -219,7 +219,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/portrait-emily-1-506x493.jpeg" alt="Mobirise Website Builder">
+                        <img src="assets/images/Team portraits/emily-portrait.jpeg" alt="Mobirise Website Builder">
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
@@ -235,7 +235,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/955757df-a20d-4767-9722-99797c0a53a2-506x675.jpeg" alt="Mobirise Website Builder">
+                        <img src="assets/images/Team portraits/korina-portrait.jpeg" alt="Mobirise Website Builder">
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Korina Milatić</strong></h5>
@@ -251,7 +251,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/9f92b7e2-551a-41e1-9a63-0f7f75abcfdb-506x692.jpeg" alt="Mobirise Website Builder">
+                        <img src="assets/images/Team portraits/ralitsa-portrait.jpeg" alt="Mobirise Website Builder">
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Ralitsa Nikolova</strong></h5>
@@ -266,7 +266,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/portrait-zoe.png" alt="zoe">
+                        <img src="assets/images/Team portraits/zoe-portrait.png" alt="zoe">
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Zoë Wals</strong></h5>
