fixed marketing text

--- a/page4.html
+++ b/page4.html
@@ -220,8 +220,8 @@ We chose to implement the image <strong> carousel</strong> to introduce the visi
 
  
 
-<strong>Channels and Promotional Activities</strong>
-								<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
+ <p class="mbr-text mbr-fonts-style display-7"><strong>Channels and Promotional Activities</strong> </p>
+								
 
 <p class="mbr-text mbr-fonts-style display-7"><strong>Channels:</strong> We created high-quality content that our target audience enjoys watching on Instagram and Facebook.&nbsp;</p> 
 
@@ -230,12 +230,12 @@ We chose to implement the image <strong> carousel</strong> to introduce the visi
 <p class="mbr-text mbr-fonts-style display-7"><strong>Promotional activities:</strong> We posted traditional posts, carousel posts, and reels on Instagram and Facebook. Each posting day had its designated theme - Speak and Spit Mondays, Culture Clash Wednesdays, Fun on Fridays, and Safe Sex Saturdays.&nbsp;</p> 
 
  
-<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
-<strong>Reflection</strong> 
+ <p class="mbr-text mbr-fonts-style display-7">
+<strong>Reflection</strong> </p> 
 <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
  
 
-<strong>Week 1</strong> 
+ <p class="mbr-text mbr-fonts-style display-7"><strong>Week 1</strong> </p> 
 
  
 
@@ -270,8 +270,8 @@ We chose to implement the image <strong> carousel</strong> to introduce the visi
 <p class="mbr-text mbr-fonts-style display-7">The traditional singular post on Friday reached three people more compared to the one on Saturday, which was multiple pictures consisting mainly of text. The results can be consequences of the traditional singular post being a big picture, making it more attention-grabbing.&nbsp;</p> 
 
  
-<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
-<strong>Week 3</strong> 
+ <p class="mbr-text mbr-fonts-style display-7"><strong>
+Week 3</strong> </p> 
 
 <p class="mbr-text mbr-fonts-style display-7"><strong>Instagram:</strong> Since this was the last week of our Marketing and Communication campaign, we decided to post one more day than previously scheduled. The posts on Monday and Wednesday followed the same pattern as the first week; expectedly, the posts with less text performed better.&nbsp;</p> 
 
@@ -290,8 +290,8 @@ We chose to implement the image <strong> carousel</strong> to introduce the visi
  
 
  
-<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
-<strong>Expectations</strong>  
+ <p class="mbr-text mbr-fonts-style display-7"><strong>
+Expectations</strong> </p>  
 <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
 <p class="mbr-text mbr-fonts-style display-7">Regarding meeting our objectives, we expected that it would be more attainable to accomplish our reach objective for Instagram - reaching 500 people. However, our reach at the beginning of Week 4, after we finished posting, was 230 people, almost half the goal we had set. Also, we expected our posts to receive more engagement when promoting them on stories; however, this was not the case.&nbsp;</p> 
 
@@ -304,8 +304,8 @@ We chose to implement the image <strong> carousel</strong> to introduce the visi
 <p class="mbr-text mbr-fonts-style display-7">Since we started very promisingly, we expected to continue with the same success and increase our reach. However, the engagement and reach on our posts decreased, and we could not figure out the cause of it. Hence, we tried promoting them on stories, but it was not helpful.&nbsp;</p> 
 
  
-<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
-<strong>Learning Points</strong> 
+ <p class="mbr-text mbr-fonts-style display-7">
+<strong>Learning Points</strong> </p> 
 <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
  
 
@@ -338,40 +338,40 @@ We chose to implement the image <strong> carousel</strong> to introduce the visi
  
 <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
 <strong>Future Planning</strong> 
-<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
-<strong>Captivating Proposition</strong> 
+<p class="mbr-text mbr-fonts-style display-7">
+<strong>Captivating Proposition</strong> </p> 
 
 <p class="mbr-text mbr-fonts-style display-7">In the span of these three weeks, Sexpats offered only suggestions and ideas for expats on how to adapt to new cultures and lead a healthy and prosperous sex life. We used this time to introduce our brand to the audience. If the project is to be continued, our brand will create its first solid offer to attract customers. An effective marketing strategy must have a concrete proposal that gives customers a reason to choose our brand. It may include a compelling cause for customers to act immediately, such as a limited-time sale. Customers will be more likely to take advantage of the deal if they are excited about it.&nbsp;</p> 
 
  
-<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
-<strong>Slogan</strong> 
+<p class="mbr-text mbr-fonts-style display-7">
+<strong>Slogan</strong> </p> 
 
 <p class="mbr-text mbr-fonts-style display-7">Furthermore, to make our brand more memorable, we will create a hook that will distinguish Sexpats from other brands that offer similar products or services. For example, a slogan can go alongside our unique value proposition, making the brand stand out and positioning us as the best option on the market. Ultimately, a slogan would be a significant additional component of our marketing and communication strategy since it helps establish a lasting and distinguishable impression of our brand and the products and services it offers, promotes our branding, and develops an emotional connection with our target audience.&nbsp;</p> 
 
  
-<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
-<strong>Brand Ambassadors</strong> 
+<p class="mbr-text mbr-fonts-style display-7">
+<strong>Brand Ambassadors</strong> </p> 
 
 <p class="mbr-text mbr-fonts-style display-7">Word-of-mouth has been proven to be one of the most successful advertising techniques. To facilitate "spreading the word" about our brand, we can start by promoting it on our personal social media accounts. As brand ambassadors, we will advocate for our products and services. This way, we will recruit new customers who will have the potential to become brand ambassadors in the future. Hence, we will identify an emotional connection with our audience through our brand ambassadors and link their personal stories to our core values.&nbsp;</p> 
 
  
-<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
-<strong>Focusing on TikTok</strong> 
+<p class="mbr-text mbr-fonts-style display-7">
+<strong>Focusing on TikTok</strong> </p> 
 
 <p class="mbr-text mbr-fonts-style display-7">TikTok has a strong user engagement rate, with users spending an average of 52 minutes daily on the platform. Therefore, we have a significant opportunity to reach and engage with our target audience. Due to the design of TikTok's algorithm, promoting relevant and engaging content for users is easily attainable. Hence, entertaining videos go viral quickly. Nonetheless, it is of great importance that our content aligns with the platform's values and tone and is tailored to our target audience.&nbsp;</p> 
 
  
-<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
-<strong>Creating More Picture-centered Content for Instagram</strong>  
+<p class="mbr-text mbr-fonts-style display-7"><strong> 
+Creating More Picture-centered Content for Instagram</strong> </p>  
 
 <p class="mbr-text mbr-fonts-style display-7">Due to Instagram's visual nature, sharing pictures is the primary mode of communication. Thus, as we have already established, picture-centered content fits the platform's essence and resonates well with its audience.&nbsp;</p> 
 
 <p class="mbr-text mbr-fonts-style display-7">Moreover, images can elicit emotions and establish relationships with the viewer. They can also successfully convey stories, and Instagram's grid format helps to promote our products and services visually. By providing more enticing and memorable content, brands can connect with their audience, build brand loyalty, and enhance engagement.&nbsp;</p> 
 
  
-<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
-<strong>Change The Approach on Facebook</strong> 
+<p class="mbr-text mbr-fonts-style display-7"><strong> 
+Change The Approach on Facebook</strong> </p> 
 
 <p class="mbr-text mbr-fonts-style display-7">So far, we should have focused more on Facebook, and we also should have taken the right approach with our target audience there. As we have already established in our reflection, videos drive the most traffic to our page because they are one of the most engaging contents on the social media platform. Videos showcase our products or services, tell stories, and provide valuable information to our audience.&nbsp;</p> 
 
@@ -380,8 +380,8 @@ We chose to implement the image <strong> carousel</strong> to introduce the visi
 <p class="mbr-text mbr-fonts-style display-7">Another effective tool we plan on using is contests and giveaways since they will drive traffic to our page and increase our brand's exposure on Facebook. Everybody likes winning prizes; thus, offering incentives to our customers can encourage them to engage with our content and share it with friends.&nbsp;</p> 
 
  
-<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
-<strong>Invest Money in Boosting Our Posts</strong>
+<p class="mbr-text mbr-fonts-style display-7"><strong>
+Invest Money in Boosting Our Posts</strong> </p>
 
 <p class="mbr-text mbr-fonts-style display-7">Last but not least, by boosting our posts, we have a higher chance of reaching more people. Hence, driving traffic to our page. However, this is only attainable if we invest money in boosting our posts on Facebook and Instagram.  </p>
 							<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
