--- a/page2.html
+++ b/page2.html
@@ -188,7 +188,7 @@
             </div>
         </div>
     </div>
-	<img src="assets/images/visual-identity-style-guide.png" alt="Style guide">
+	<img src="assets/images/Images about us/visual-identity-style-guide.png" alt="Style guide">
 </section>
 
 <section data-bs-version="5.1" class="content5 cid-tADB013Bys" id="content5-1t">
