--- a/page4.html
+++ b/page4.html
@@ -136,7 +136,7 @@
                               <p class="mbr-text mbr-fonts-style display-7">8:00 PM - Ruben looks for a job and applies for suitable positions.&nbsp;</p>
                               <p class="mbr-text mbr-fonts-style display-7">9:30 PM - Ruben watches TV and goes to bed after.&nbsp;</p>
 								<img src="assets/images/Images coporate/Content/ruben-persona.jpg" alt="ruben">
-								<img src="assets/images/visual-identity-style-guide.png" alt="visual">
+								<img src="assets/images/Images about us/visual-identity-style-guide.png" alt="visual">
                               <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
                               <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
                                  <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
