--- a/page4.html
+++ b/page4.html
@@ -437,6 +437,14 @@ We decided to not use Twitter, although it was also frequently mentioned by our 
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">Credits<br>Please provide links and/or credits for third-party elements including:<br><br>Additional HTML templates derived from Mobirise under the following terms of agreement: Terms of License Mobirise&nbsp;<br>(Template used: Free Corporate)&nbsp;<a href="https://mobirise.com/terms.html" class="text-primary">https://mobirise.com/terms.html</a><br><br>Additional Images derived from Pixabay under the following terms of agreement: <a href="https://pixabay.com/service/terms/" class="text-primary">Terms of License Pixabay</a>&nbsp;</p>
+								<p class="mbr-text mbr-fonts-style display-7">Interviews<br> </p>
+								 Emily Tajima (ID: 212079): 
+  <br>
+                                Korina Milatić (ID: 211971): 
+  <br>
+                                Ralitsa Nikolova (ID: 210474): 
+								
+                                Zoë Wals (ID: 212006):<a href="https://drive.google.com/drive/folders/1EVhs6JjCB13C3yY1l6AD53LBYjU76fGE?usp=sharing" class="text-primary">
                             </div>
                         </div>
                     </div>
