--- a/page4.html
+++ b/page4.html
@@ -387,6 +387,8 @@ Invest Money in Boosting Our Posts</strong> </p>
 							<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
 							<strong> Proffesionalism</strong>
 							<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
+								<img src="assets/images/Images coporate/Marketing/instagramfeed.jpeg" alt="visual">
+									<img src="assets/images/Images coporate/Marketing/facebookfeed.jpeg" alt="visual">
 							
                             </div>
                         </div>
@@ -436,8 +438,8 @@ We decided to not use Twitter, although it was also frequently mentioned by our 
                     <div id="tab5" class="tab-pane" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text mbr-fonts-style display-7"><strong> Credits</strong><br>Please provide links and/or credits for third-party elements including:<br><br>Additional HTML templates derived from Mobirise under the following terms of agreement: Terms of License Mobirise&nbsp;<br>(Template used: Free Corporate)&nbsp;<a href="https://mobirise.com/terms.html" class="text-primary">https://mobirise.com/terms.html</a><br><br>Additional Images derived from Pixabay under the following terms of agreement: <a href="https://pixabay.com/service/terms/" class="text-primary">Terms of License Pixabay</a>&nbsp;</p>
-								<p class="mbr-text mbr-fonts-style display-7"><strong>Interviews </strong><br> </p>
+                                <p class="mbr-text mbr-fonts-style display-7"><strong> Credits:</strong><br>Please provide links and/or credits for third-party elements including:<br><br>Additional HTML templates derived from Mobirise under the following terms of agreement: Terms of License Mobirise&nbsp;<br>(Template used: Free Corporate)&nbsp;<a href="https://mobirise.com/terms.html" class="text-primary">https://mobirise.com/terms.html</a><br><br>Additional Images derived from Pixabay under the following terms of agreement: <a href="https://pixabay.com/service/terms/" class="text-primary">Terms of License Pixabay</a>&nbsp;</p>
+								<p class="mbr-text mbr-fonts-style display-7"><strong>Interviews: </strong><br> </p>
 								 <a href="https://drive.google.com/drive/folders/1Nuup_m27fXxxAVfhy2jXFQ4Qe3L5AwUN"
 								class="text-primary">Problem and Solutions Interviews</a><br>
 								
