--- a/page4.html
+++ b/page4.html
@@ -230,8 +230,8 @@ We chose to implement the image <strong> carousel</strong> to introduce the visi
 <p class="mbr-text mbr-fonts-style display-7"><strong>Promotional activities:</strong> We posted traditional posts, carousel posts, and reels on Instagram and Facebook. Each posting day had its designated theme - Speak and Spit Mondays, Culture Clash Wednesdays, Fun on Fridays, and Safe Sex Saturdays.&nbsp;</p> 
 
  
- <p class="mbr-text mbr-fonts-style display-7">
-<strong>Reflection</strong> </p> 
+ <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p> 
+<strong>Reflection</strong> 
 <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
  
 
@@ -289,7 +289,7 @@ Week 3</strong> </p>
 
  
 
- 
+ <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p> 
  <p class="mbr-text mbr-fonts-style display-7"><strong>
 Expectations</strong> </p>  
 <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
@@ -303,7 +303,7 @@ Expectations</strong> </p>
 
 <p class="mbr-text mbr-fonts-style display-7">Since we started very promisingly, we expected to continue with the same success and increase our reach. However, the engagement and reach on our posts decreased, and we could not figure out the cause of it. Hence, we tried promoting them on stories, but it was not helpful.&nbsp;</p> 
 
- 
+ <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p> 
  <p class="mbr-text mbr-fonts-style display-7">
 <strong>Learning Points</strong> </p> 
 <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
@@ -336,8 +336,8 @@ Expectations</strong> </p>
 <p class="mbr-text mbr-fonts-style display-7"><strong>Picture-centered posts:</strong> As previously mentioned in the reflection, mainly picture-centered posts with little to no text have more engagement and drive more traffic to our Instagram page, compared to posts predominantly with text and illustrations. Our target group is young expats between 25 - 35. Therefore, posts with more text or graphics would not be as entertaining as posts with less text and more pictures. Instagram's algorithm prioritizes aesthetically appealing content and promotes posts that are more likely to be interacted with. Hence, images in postings are more likely to be seen by a larger audience, resulting in increased engagement rates.&nbsp;</p> 
 
  
-<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
-<strong>Future Planning</strong> 
+<p class="mbr-text mbr-fonts-style display-7">&nbsp;
+<strong>Future Planning</strong></p> 
 <p class="mbr-text mbr-fonts-style display-7">
 <strong>Captivating Proposition</strong> </p> 
 
@@ -384,8 +384,8 @@ Change The Approach on Facebook</strong> </p>
 Invest Money in Boosting Our Posts</strong> </p>
 
 <p class="mbr-text mbr-fonts-style display-7">Last but not least, by boosting our posts, we have a higher chance of reaching more people. Hence, driving traffic to our page. However, this is only attainable if we invest money in boosting our posts on Facebook and Instagram.  </p>
-							<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
-							<strong> Proffesionalism</strong>
+							<p class="mbr-text mbr-fonts-style display-7">&nbsp;
+							<strong> Proffesionalism</strong></p>
 							<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
 								<img src="assets/images/Images coporate/Marketing/instagramfeed1.jpeg" alt="visual">
 								<img src="assets/images/Images coporate/Marketing/instagramfeed2.jpeg" alt="visual">
