--- a/page4.html
+++ b/page4.html
@@ -453,7 +453,7 @@ We decided to not use Twitter, although it was also frequently mentioned by our 
 								<img src="assets/images/Images coporate/Management/leancanvas3.jpeg" alt="visual">
 									<img src="assets/images/Images coporate/Management/leancanvas3-2.jpeg" alt="visual">
 									<img src="assets/images/Images coporate/Management/leancanvas3-3.jpeg" alt="visual">
-								
+								<p class="mbr-text mbr-fonts-style display-7"><strong> Management Reflection</strong></p><br>
                             </div>
                         </div>
                     </div>
