--- a/page4.html
+++ b/page4.html
@@ -383,10 +383,15 @@ Change The Approach on Facebook</strong> </p>
 <p class="mbr-text mbr-fonts-style display-7"><strong>
 Invest Money in Boosting Our Posts</strong> </p>
 
-<p class="mbr-text mbr-fonts-style display-7">Last but not least, by boosting our posts, we have a higher chance of reaching more people. Hence, driving traffic to our page. However, this is only attainable if we invest money in boosting our posts on Facebook and Instagram.  </p>
+<p class="mbr-text mbr-fonts-style display-7">Last but not least, by boosting our posts, we have a higher chance of reaching more people. Hence, driving traffic to our page. However, this is only attainable if we invest money in boosting our posts on Facebook and Instagram.&nbsp;  </p>
 							<p class="mbr-text mbr-fonts-style display-7">&nbsp;
-							<strong> Proffesionalism</strong></p>
+							<strong> Proffesionalism:</strong>&nbsp;</p>
 							<p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
+						 <a href="https://www.instagram.com/sexpats_official/"
+						class="text-primary">Instagram&nbsp;</a><br> 
+										<a href="https://www.facebook.com/profile.php?id=100091264865622"
+									class="text-primary">Facebook&nbsp;</a><br> 
+								
 								<img src="assets/images/Images coporate/Marketing/instagramfeed1.jpeg" alt="visual">
 								<img src="assets/images/Images coporate/Marketing/instagramfeed2.jpeg" alt="visual">
 									<img src="assets/images/Images coporate/Marketing/facebookfeed.jpeg" alt="visual">
