user tester report

--- a/page4.html
+++ b/page4.html
@@ -466,7 +466,54 @@ We decided to not use Twitter, although it was also frequently mentioned by our 
                     <div id="tab6" class="tab-pane" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text mbr-fonts-style display-7">Your testing goals – in other words, what you are trying to learn about your website?<br>Your testing methods, which includes information about:<br><br>The test’s participants (number, match with target audience, etc.)<br><br>The test’s setting (which material is used, is it done remotely, on campus, at home, etc.)<br><br>The test’s protocol (what instructions are given, how it is recorded, etc.)<br><br>Your testing results, which includes information about:<br>Positive and negative aspects of the UI/UX that have been identified, ranked by importance.<br><br>Improvements that have been implemented on the final website (or that would be implemented if doing so would be too complex)<br></p>
+                                <p class="mbr-text mbr-fonts-style display-7"><strong>Testing Goals </strong> 
+
+*The website is easy to navigate. 
+
+*The fonts and colors are suitable for our brand. 
+
+*The visual identity of the brand draws attention. 
+
+*All the buttons and links work. 
+
+									*The website is comprehensive and informative. &nbsp; </p>
+
+ 
+
+ <p class="mbr-text mbr-fonts-style display-7"> <strong>Testing Methods </strong> 
+
+*Number of participants - 1 
+
+*Target group - lonely and single expat 
+
+*Age - 25 
+
+*Setting - at home and in person 
+
+*The user testing is recorded on a voice recording. The user was instructed to go through every website page and share what stood out, what they liked and disliked, and what they would change.&nbsp; </p>
+
+ 
+
+<p class="mbr-text mbr-fonts-style display-7"><strong>Testing Results  </strong>
+
+*Our user liked how our color scheme was evenly distributed across the website. 
+
+*The font headings were nice, clean, and easy to read. 
+
+*The whole website looks cohesive. 
+
+*She liked that icons and pictures were included that make the website more interactive. 
+
+*The user noted that the website is informative and that all buttons and links work accordingly.  
+
+*The user liked the carousel on the first page and how our brand values are included and easy to find. 
+
+*She thinks the font for the main text should be changed to something more playful. However, she liked our logo and thought it was authentic and creative.  
+
+	She remarked that our visions might be too long. &nbsp; </p>
+								<p class="mbr-text mbr-fonts-style display-7"><strong>Recording: </strong><br> </p>
+								 <a href="https://drive.google.com/drive/folders/1X14N5gNmgv9ZSVIRpj9DwSHLLPx4VHIF?usp=sharing"
+									class="text-primary">User Test Report Interview&nbsp;</a><br> 
                             </div>
                         </div>
                     </div>
